feat: Header and footer will accept full with settings and able to set background

--- a/src/editor/core/i18n/lang/en.json
+++ b/src/editor/core/i18n/lang/en.json
@@ -56,6 +56,16 @@
       "borderTdLeft": "Left",
       "borderTdForward": "Forward",
       "borderTdBack": "Back"
+    },
+    "header": {
+      "fullWidth": "Full width background",
+      "contentFullWidth": "Full width content",
+      "setBackground": "Set Background..."
+    },
+    "footer": {
+      "fullWidth": "Full width background",
+      "contentFullWidth": "Full width content",
+      "setBackground": "Set Background..."
     }
   },
   "datePicker": {
