feat: T3 auto-fit and table sizing commands with context menus
- Add TableAutoFit enum (PAGE, CONTENT, EQUAL)
- Add tableAutoFit() command: fit to page, fit to content, equal columns
- Add tableColWidth() command: set exact column width
- Add tableRowHeight() command: set exact row min height
- Add distributeTableRows() command: equalize row heights
- Add context menus: Auto-fit, Distribute rows, Split cell submenus
- Add i18n keys for en, zh-CN, ar locales
- Expose split cell commands in context menu (previously command-only)

--- a/src/editor/core/i18n/lang/ar.json
+++ b/src/editor/core/i18n/lang/ar.json
@@ -55,7 +55,15 @@
       "borderTdBottom": "أسفل",
       "borderTdLeft": "يسار",
       "borderTdForward": "قطري أمامي",
-      "borderTdBack": "قطري خلفي"
+      "borderTdBack": "قطري خلفي",
+      "autoFit": "ملاءمة تلقائية",
+      "autoFitPage": "ملاءمة عرض الصفحة",
+      "autoFitContent": "ملاءمة المحتوى",
+      "autoFitEqual": "أعمدة متساوية العرض",
+      "distributeRows": "توزيع الصفوف بالتساوي",
+      "splitCell": "تقسيم الخلية",
+      "splitVertical": "تقسيم عمودي",
+      "splitHorizontal": "تقسيم أفقي"
     },
     "header": {
       "fullWidth": "خلفية بعرض كامل",
