feat: T4 per-cell border styling (color, width, style)
- Add TdBorderStyle enum (SOLID, DASHED, DOTTED, DOUBLE)
- Add borderColor, borderWidth, borderStyle to ITd interface
- Add tableTdBorderColor, tableTdBorderWidth, tableTdBorderStyle commands
- Update _drawBorder to apply per-cell overrides on all 4 sides
- Add context menus: Cell border width (thin/medium/thick), Cell border style
- Parse per-cell border CSS from pasted HTML (paste preservation)
- Export per-cell border styles in createDomFromElementList
- Add i18n keys for en, zh-CN, ar locales
- Fix: per-cell overrides now draw top & left borders (not just right & bottom)
- Update .ai progress docs and TABLE-IMPROVEMENT.md

--- a/src/editor/core/i18n/lang/ar.json
+++ b/src/editor/core/i18n/lang/ar.json
@@ -63,7 +63,17 @@
       "distributeRows": "توزيع الصفوف بالتساوي",
       "splitCell": "تقسيم الخلية",
       "splitVertical": "تقسيم عمودي",
-      "splitHorizontal": "تقسيم أفقي"
+      "splitHorizontal": "تقسيم أفقي",
+      "borderTdColor": "لون حدود الخلية",
+      "borderTdWidth": "عرض حدود الخلية",
+      "borderTdWidthThin": "رفيع (1px)",
+      "borderTdWidthMedium": "متوسط (2px)",
+      "borderTdWidthThick": "سميك (3px)",
+      "borderTdStyle": "نمط حدود الخلية",
+      "borderTdStyleSolid": "متصل",
+      "borderTdStyleDashed": "متقطع",
+      "borderTdStyleDotted": "منقط",
+      "borderTdStyleDouble": "مزدوج"
     },
     "header": {
       "fullWidth": "خلفية بعرض كامل",
