fix: T5.3 table props dialog + border/selection rendering bugs
- Bug 1: Move _drawBackgroundColor to selCtx (bgCtx param) so cell
  backgrounds render on the selection layer, keeping selection visible
- Bug 3: Add 'None (0px)' option to cell border width submenu
- Bug 4+5: Rewrite _drawBorder with per-edge drawLine() helper;
  hasCellOverride uses !== undefined check (fixes borderWidth=0);
  per-cell override draws all 4 sides (fixes dashed style on top/left)
- T5.3: TablePropertiesDialog component - table border type/color,
  cell bg color, cell border color/width/style, vertical align, padding
  Accessible via 'Table Properties...' context menu entry

--- a/src/editor/core/i18n/lang/ar.json
+++ b/src/editor/core/i18n/lang/ar.json
@@ -66,6 +66,7 @@
       "splitHorizontal": "تقسيم أفقي",
       "borderTdColor": "لون حدود الخلية",
       "borderTdWidth": "عرض حدود الخلية",
+      "borderTdWidthNone": "بدون (0px)",
       "borderTdWidthThin": "رفيع (1px)",
       "borderTdWidthMedium": "متوسط (2px)",
       "borderTdWidthThick": "سميك (3px)",
@@ -79,7 +80,8 @@
       "tdPadding": "هامش الخلية",
       "tdPaddingSmall": "صغير (2px)",
       "tdPaddingMedium": "متوسط (5px)",
-      "tdPaddingLarge": "كبير (10px)"
+      "tdPaddingLarge": "كبير (10px)",
+      "tableProperties": "خصائص الجدول..."
     },
     "header": {
       "fullWidth": "خلفية بعرض كامل",
